--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <title>Teste</title>
+    <title>Calculadora Academia</title>
 </head>
 
 <body>
